<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UnknownId">

    <androidx.constraintlayout.widget.Guideline
        android:id="@id/guide_margin_top"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_header_bottom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_content_top"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@id/guide_margin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline style="@style/GuideLineHorizontalStart" />

    <androidx.constraintlayout.widget.Guideline style="@style/GuideLineHorizontalEnd" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="@id/guide_header_bottom"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_mountain"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/guide_margin_end"
        app:layout_constraintStart_toStartOf="@id/guide_margin_start"
        app:layout_constraintTop_toTopOf="@+id/guide_margin_top" />

    <androidx.cardview.widget.CardView
        android:id="@id/main_content_container"
        style="@style/Widget.MaterialComponents.CardView.CustomCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layoutAnimation="@anim/layout_animation_slide_up"
        app:layout_constraintBottom_toTopOf="@id/guide_margin_bottom"
        app:layout_constraintEnd_toStartOf="@id/guide_margin_end"
        app:layout_constraintStart_toStartOf="@id/guide_margin_start"
        app:layout_constraintTop_toTopOf="@id/guide_content_top"
        tools:layoutAnimation="@null">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="?attr/mSpaceXL"
                android:paddingTop="46dp"
                android:paddingEnd="?attr/mSpaceXL"
                android:paddingBottom="?attr/mSpaceXL"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_container"
                    style="@style/CredentialsTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/mTextBoxMinHieght"
                        android:maxEms="@integer/username_Max_EMS" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_container"
                    style="@style/CredentialsTextInput.Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?attr/mSpaceM"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/mTextBoxMinHieght"
                        android:maxEms="@integer/password_Max_EMS" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/mMinTouchTarget"
                    android:layout_marginTop="?attr/mSpace"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/need_help_signing_in"
                    android:textSize="?attr/mFontSizeS" />

                <Space style="@style/VerticalFill" />

                <com.google.android.material.button.MaterialButton
                    android:id="@id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="?attr/mSpaceXL"
                    android:text="@string/login" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@id/main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="?attr/mSpaceM"
        android:src="@drawable/icon_add"
        app:layout_constraintBottom_toTopOf="@id/main_content_container"
        app:layout_constraintEnd_toStartOf="@id/guide_margin_end"
        app:layout_constraintTop_toTopOf="@id/main_content_container" />

</androidx.constraintlayout.widget.ConstraintLayout>